--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,47 +1,39 @@
-.translator-container {
-    max-width: 600px;
-    margin: 1rem auto;
-    padding: 20px;
-    border: 1.5px solid #270dba;
-    border-radius: 5px;
-    text-align: center;
-}
-
-.language-selectors {
+.translator{
+    width: 400px;
     display: flex;
-    gap: 5rem;
-    margin-bottom: 15px;
-    justify-content: center;
+    flex-direction: column;
+    box-shadow: 0px 0px 5px black;
+    transform: translate(100%,20%);
+    background-color: rgb(56, 118, 151);
 }
 
-.language-dropdown {
-    width: 26%;
-    padding: 6px;
-    font-size: 16px;
+h1{
+    text-shadow: 0px 0px 3px rgb(233, 29, 29);
 }
 
-.input-textarea {
-    height: 120px;
-    width: 90%;
-    padding: 10px;
-    margin: 15px 10px;
-    font-size: 16px;
+.textarea{
+    height: 80px;
+    margin-bottom: 10px;
 }
 
-.translate-button {
-    background-color: #007bff;
-    color: #fff;
+.dropdown{
+    margin-bottom: 10px;
+}
+
+.button{
+    width: 50%;
+    margin-left: 20%;
+    height: 40px;
+    background-color: rgb(12, 186, 76);
+    font-size: 20px;
     border: none;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
+    border-radius: 10px;
 }
 
-.translated-heading {
-    margin-top: 20px;
+.heading{
+    margin-bottom: -5px;
+    color: white;
 }
-
-.translated-text {
-    white-space: pre-line;
-    /* Preserve line breaks */
+.text{
+    color: chartreuse;
 }
